books/projects/rac/src/parser.output
State 80 conflicts: 1 shift/reduce
State 128 conflicts: 1 shift/reduce
State 412 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: program_element program
    2        | program_element

    3 program_element: type_dec ';'
    4                | const_dec ';'
    5                | func_def

    6 type_dec: typedef_dec
    7         | STRUCT ID struct_type
    8         | ENUM ID enum_type

    9 typedef_dec: TYPEDEF typedef_type ID
   10            | typedef_dec '[' arithmetic_expression ']'

   11 typedef_type: primitive_type
   12             | register_type
   13             | array_param_type
   14             | mv_type
   15             | TYPEID

   16 type_spec: typedef_type
   17          | STRUCT struct_type
   18          | ENUM enum_type

   19 primitive_type: INT
   20               | UINT
   21               | INT64
   22               | UINT64
   23               | BOOL

   24 register_type: SC_INT '<' arithmetic_expression '>'
   25              | SC_UINT '<' arithmetic_expression '>'
   26              | SC_BIGUINT '<' arithmetic_expression '>'
   27              | SC_BIGINT '<' arithmetic_expression '>'
   28              | SC_FIXED '<' arithmetic_expression ',' arithmetic_expression '>'
   29              | SC_UFIXED '<' arithmetic_expression ',' arithmetic_expression '>'
   30              | AC_INT '<' arithmetic_expression ',' FALSE '>'
   31              | AC_INT '<' arithmetic_expression ',' TRUE '>'

   32 array_param_type: ARRAY '<' type_spec ',' arithmetic_expression '>'

   33 struct_type: '{' struct_field_list '}'

   34 struct_field_list: struct_field
   35                  | struct_field_list struct_field

   36 struct_field: type_spec ID ';'

   37 enum_type: '{' enum_const_dec_list '}'

   38 enum_const_dec_list: enum_const_dec
   39                    | enum_const_dec_list ',' enum_const_dec

   40 enum_const_dec: ID
   41               | ID '=' expression

   42 mv_type: TUPLE '<' type_spec ',' type_spec '>'
   43        | TUPLE '<' type_spec ',' type_spec ',' type_spec '>'
   44        | TUPLE '<' type_spec ',' type_spec ',' type_spec ',' type_spec '>'
   45        | TUPLE '<' type_spec ',' type_spec ',' type_spec ',' type_spec ',' type_spec '>'
   46        | TUPLE '<' type_spec ',' type_spec ',' type_spec ',' type_spec ',' type_spec ',' type_spec '>'
   47        | TUPLE '<' type_spec ',' type_spec ',' type_spec ',' type_spec ',' type_spec ',' type_spec ',' type_spec '>'

   48 primary_expression: constant
   49                   | symbol_ref
   50                   | funcall
   51                   | '(' expression ')'

   52 constant: integer
   53         | boolean

   54 integer: NAT
   55        | '-' NAT

   56 boolean: TRUE
   57        | FALSE

   58 symbol_ref: ID

   59 funcall: ID '(' expr_list ')'
   60        | TEMPLATEID '<' arith_expr_list '>' '(' arith_expr_list ')'

   61 postfix_expression: primary_expression
   62                   | array_or_bit_ref
   63                   | struct_ref
   64                   | subrange
   65                   | to_uint_expression
   66                   | to_uint64_expression

   67 array_or_bit_ref: postfix_expression '[' expression ']'

   68 struct_ref: postfix_expression '.' ID

   69 subrange: postfix_expression '.' RANGE '(' expression ',' expression ')'
   70         | postfix_expression '.' SLC '<' NAT '>' '(' expression ')'

   71 to_uint_expression: postfix_expression '.' TO_UINT '(' ')'

   72 to_uint64_expression: postfix_expression '.' TO_UINT64 '(' ')'

   73 prefix_expression: postfix_expression
   74                  | unary_op prefix_expression
   75                  | '(' type_spec ')' prefix_expression
   76                  | type_spec '(' expression ')'

   77 unary_op: '+'
   78         | '-'
   79         | '~'
   80         | '!'

   81 mult_expression: prefix_expression
   82                | mult_expression '*' prefix_expression
   83                | mult_expression '/' prefix_expression
   84                | mult_expression '%' prefix_expression

   85 add_expression: mult_expression
   86               | add_expression '+' mult_expression
   87               | add_expression '-' mult_expression

   88 arithmetic_expression: add_expression
   89                      | arithmetic_expression LSHFT_OP add_expression
   90                      | arithmetic_expression RSHFT_OP add_expression

   91 rel_expression: arithmetic_expression
   92               | rel_expression '<' arithmetic_expression
   93               | rel_expression '>' arithmetic_expression
   94               | rel_expression LE_OP arithmetic_expression
   95               | rel_expression GE_OP arithmetic_expression

   96 eq_expression: rel_expression
   97              | eq_expression EQ_OP rel_expression
   98              | eq_expression NE_OP rel_expression

   99 and_expression: eq_expression
  100               | and_expression '&' eq_expression

  101 xor_expression: and_expression
  102               | xor_expression '^' and_expression

  103 ior_expression: xor_expression
  104               | ior_expression '|' xor_expression

  105 log_and_expression: ior_expression
  106                   | log_and_expression AND_OP ior_expression

  107 log_or_expression: log_and_expression
  108                  | log_or_expression OR_OP log_and_expression

  109 cond_expression: log_or_expression
  110                | log_or_expression '?' expression ':' cond_expression

  111 mv_expression: mv_type '(' expr_list ')'

  112 expression: cond_expression
  113           | mv_expression

  114 expr_list: /* empty */
  115          | nontrivial_expr_list

  116 nontrivial_expr_list: expression
  117                     | nontrivial_expr_list ',' expression

  118 arith_expr_list: /* empty */
  119                | nontrivial_arith_expr_list

  120 nontrivial_arith_expr_list: arithmetic_expression
  121                           | nontrivial_arith_expr_list ',' arithmetic_expression

  122 statement: simple_statement ';'
  123          | block
  124          | iterative_statement
  125          | if_statement
  126          | switch_statement
  127          | MASC symbol_ref ID '{' nontrivial_expr_list '}' statement

  128 simple_statement: var_dec
  129                 | const_dec
  130                 | multiple_var_dec
  131                 | multiple_const_dec
  132                 | wait_statement
  133                 | continue_statement
  134                 | break_statement
  135                 | return_statement
  136                 | assignment
  137                 | multiple_assignment
  138                 | assertion
  139                 | null_statement

  140 var_dec: type_spec untyped_var_dec

  141 untyped_var_dec: ID
  142                | ID '=' expression
  143                | ID '=' array_init
  144                | ID '[' arithmetic_expression ']'
  145                | ID '[' arithmetic_expression ']' '=' array_init

  146 array_init: '{' array_init_list '}'

  147 array_init_list: expression
  148                | array_init_list ',' expression

  149 const_dec: CONST type_spec untyped_const_dec

  150 untyped_const_dec: ID '=' expression
  151                  | ID '=' array_init
  152                  | ID '[' arithmetic_expression ']' '=' array_init

  153 multiple_var_dec: var_dec ',' untyped_var_dec
  154                 | multiple_var_dec ',' untyped_var_dec

  155 multiple_const_dec: const_dec ',' untyped_const_dec
  156                   | multiple_const_dec ',' untyped_const_dec

  157 wait_statement: WAIT '(' ')'

  158 continue_statement: CONTINUE

  159 break_statement: BREAK

  160 return_statement: RETURN
  161                 | RETURN expression

  162 assignment: expression assign_op expression
  163           | expression inc_op
  164           | postfix_expression '.' SET_SLC '(' expression ',' expression ')'

  165 assign_op: '='
  166          | RSHFT_ASSIGN
  167          | LSHFT_ASSIGN
  168          | ADD_ASSIGN
  169          | SUB_ASSIGN
  170          | MUL_ASSIGN
  171          | MOD_ASSIGN
  172          | AND_ASSIGN
  173          | XOR_ASSIGN
  174          | OR_ASSIGN

  175 inc_op: INC_OP
  176       | DEC_OP

  177 multiple_assignment: TIE '(' nontrivial_expr_list ')' '=' postfix_expression

  178 assertion: ASSERT '(' expression ')'

  179 null_statement: /* empty */

  180 @1: /* empty */

  181 block: '{' @1 statement_list '}'

  182 statement_list: /* empty */
  183               | statement_list statement

  184 iterative_statement: for_statement
  185                    | while_statement
  186                    | do_statement
  187                    | MASC constant ID iterative_statement
  188                    | MASC symbol_ref ID iterative_statement

  189 @2: /* empty */

  190 for_statement: FOR @2 '(' for_init ';' expression ';' assignment ')' statement

  191 for_init: var_dec
  192         | assignment

  193 while_statement: WHILE '(' expression ')' statement

  194 do_statement: DO statement WHILE '(' expression ')' ';'

  195 if_statement: IF '(' expression ')' statement
  196             | IF '(' expression ')' statement ELSE statement

  197 switch_statement: SWITCH '(' expression ')' '{' case_list '}'

  198 case_list: case
  199          | case_list case

  200 case: CASE case_label ':' statement_list
  201     | DEFAULT ':' statement_list

  202 case_label: constant
  203           | symbol_ref

  204 @3: /* empty */

  205 func_def: type_spec ID @3 '(' param_dec_list ')' block
  206         | func_template

  207 param_dec_list: /* empty */
  208               | nontrivial_param_dec_list

  209 nontrivial_param_dec_list: var_dec
  210                          | nontrivial_param_dec_list ',' var_dec

  211 @4: /* empty */

  212 func_template: TEMPLATE @4 '<' template_param_dec_list '>' type_spec ID '(' param_dec_list ')' block

  213 template_param_dec_list: /* empty */
  214                        | nontrivial_template_param_dec_list

  215 nontrivial_template_param_dec_list: template_param_dec
  216                                   | nontrivial_template_param_dec_list ',' template_param_dec

  217 template_param_dec: type_spec ID


Terminals, with rules where they appear

$end (0) 0
'!' (33) 80
'%' (37) 84
'&' (38) 100
'(' (40) 51 59 60 69 70 71 72 75 76 111 157 164 177 178 190 193 194
    195 196 197 205 212
')' (41) 51 59 60 69 70 71 72 75 76 111 157 164 177 178 190 193 194
    195 196 197 205 212
'*' (42) 82
'+' (43) 77 86
',' (44) 28 29 30 31 32 39 42 43 44 45 46 47 69 117 121 148 153 154
    155 156 164 210 216
'-' (45) 55 78 87
'.' (46) 68 69 70 71 72 164
'/' (47) 83
':' (58) 110 200 201
';' (59) 3 4 36 122 190 194
'<' (60) 24 25 26 27 28 29 30 31 32 42 43 44 45 46 47 60 70 92 212
'=' (61) 41 142 143 145 150 151 152 165 177
'>' (62) 24 25 26 27 28 29 30 31 32 42 43 44 45 46 47 60 70 93 212
'?' (63) 110
'[' (91) 10 67 144 145 152
']' (93) 10 67 144 145 152
'^' (94) 102
'{' (123) 33 37 127 146 181 197
'|' (124) 104
'}' (125) 33 37 127 146 181 197
'~' (126) 79
error (256)
TYPEDEF (258) 9
CONST (259) 149
STRUCT (260) 7 17
ENUM (261) 8 18
TEMPLATE (262) 212
MASC (263) 127 187 188
INT (264) 19
UINT (265) 20
INT64 (266) 21
UINT64 (267) 22
BOOL (268) 23
TO_UINT (269) 71
TO_UINT64 (270) 72
RANGE (271) 69
SLC (272) 70
SET_SLC (273) 164
WAIT (274) 157
FOR (275) 190
IF (276) 195 196
ELSE (277) 196
WHILE (278) 193 194
DO (279) 194
SWITCH (280) 197
CASE (281) 200
DEFAULT (282) 201
BREAK (283) 159
CONTINUE (284) 158
RETURN (285) 160 161
ASSERT (286) 178
ARRAY (287) 32
TUPLE (288) 42 43 44 45 46 47
TIE (289) 177
SC_INT (290) 24
SC_BIGINT (291) 27
SC_FIXED (292) 28
SC_UINT (293) 25
SC_BIGUINT (294) 26
SC_UFIXED (295) 29
AC_INT (296) 30 31
RSHFT_ASSIGN (297) 166
LSHFT_ASSIGN (298) 167
ADD_ASSIGN (299) 168
SUB_ASSIGN (300) 169
MUL_ASSIGN (301) 170
MOD_ASSIGN (302) 171
AND_ASSIGN (303) 172
XOR_ASSIGN (304) 173
OR_ASSIGN (305) 174
INC_OP (306) 175
DEC_OP (307) 176
RSHFT_OP (308) 90
LSHFT_OP (309) 89
AND_OP (310) 106
OR_OP (311) 108
LE_OP (312) 94
GE_OP (313) 95
EQ_OP (314) 97
NE_OP (315) 98
ID (316) 7 8 9 36 40 41 58 59 68 127 141 142 143 144 145 150 151 152
    187 188 205 212 217
NAT (317) 54 55 70
TRUE (318) 31 56
FALSE (319) 30 57
TYPEID (320) 15
TEMPLATEID (321) 60


Nonterminals, with rules where they appear

$accept (91)
    on left: 0
program (92)
    on left: 1 2, on right: 0 1
program_element (93)
    on left: 3 4 5, on right: 1 2
type_dec (94)
    on left: 6 7 8, on right: 3
typedef_dec (95)
    on left: 9 10, on right: 6 10
typedef_type (96)
    on left: 11 12 13 14 15, on right: 9 16
type_spec (97)
    on left: 16 17 18, on right: 32 36 42 43 44 45 46 47 75 76 140
    149 205 212 217
primitive_type (98)
    on left: 19 20 21 22 23, on right: 11
register_type (99)
    on left: 24 25 26 27 28 29 30 31, on right: 12
array_param_type (100)
    on left: 32, on right: 13
struct_type (101)
    on left: 33, on right: 7 17
struct_field_list (102)
    on left: 34 35, on right: 33 35
struct_field (103)
    on left: 36, on right: 34 35
enum_type (104)
    on left: 37, on right: 8 18
enum_const_dec_list (105)
    on left: 38 39, on right: 37 39
enum_const_dec (106)
    on left: 40 41, on right: 38 39
mv_type (107)
    on left: 42 43 44 45 46 47, on right: 14 111
primary_expression (108)
    on left: 48 49 50 51, on right: 61
constant (109)
    on left: 52 53, on right: 48 187 202
integer (110)
    on left: 54 55, on right: 52
boolean (111)
    on left: 56 57, on right: 53
symbol_ref (112)
    on left: 58, on right: 49 127 188 203
funcall (113)
    on left: 59 60, on right: 50
postfix_expression (114)
    on left: 61 62 63 64 65 66, on right: 67 68 69 70 71 72 73 164
    177
array_or_bit_ref (115)
    on left: 67, on right: 62
struct_ref (116)
    on left: 68, on right: 63
subrange (117)
    on left: 69 70, on right: 64
to_uint_expression (118)
    on left: 71, on right: 65
to_uint64_expression (119)
    on left: 72, on right: 66
prefix_expression (120)
    on left: 73 74 75 76, on right: 74 75 81 82 83 84
unary_op (121)
    on left: 77 78 79 80, on right: 74
mult_expression (122)
    on left: 81 82 83 84, on right: 82 83 84 85 86 87
add_expression (123)
    on left: 85 86 87, on right: 86 87 88 89 90
arithmetic_expression (124)
    on left: 88 89 90, on right: 10 24 25 26 27 28 29 30 31 32 89 90
    91 92 93 94 95 120 121 144 145 152
rel_expression (125)
    on left: 91 92 93 94 95, on right: 92 93 94 95 96 97 98
eq_expression (126)
    on left: 96 97 98, on right: 97 98 99 100
and_expression (127)
    on left: 99 100, on right: 100 101 102
xor_expression (128)
    on left: 101 102, on right: 102 103 104
ior_expression (129)
    on left: 103 104, on right: 104 105 106
log_and_expression (130)
    on left: 105 106, on right: 106 107 108
log_or_expression (131)
    on left: 107 108, on right: 108 109 110
cond_expression (132)
    on left: 109 110, on right: 110 112
mv_expression (133)
    on left: 111, on right: 113
expression (134)
    on left: 112 113, on right: 41 51 67 69 70 76 110 116 117 142 147
    148 150 161 162 163 164 178 190 193 194 195 196 197
expr_list (135)
    on left: 114 115, on right: 59 111
nontrivial_expr_list (136)
    on left: 116 117, on right: 115 117 127 177
arith_expr_list (137)
    on left: 118 119, on right: 60
nontrivial_arith_expr_list (138)
    on left: 120 121, on right: 119 121
statement (139)
    on left: 122 123 124 125 126 127, on right: 127 183 190 193 194
    195 196
simple_statement (140)
    on left: 128 129 130 131 132 133 134 135 136 137 138 139,
    on right: 122
var_dec (141)
    on left: 140, on right: 128 153 191 209 210
untyped_var_dec (142)
    on left: 141 142 143 144 145, on right: 140 153 154
array_init (143)
    on left: 146, on right: 143 145 151 152
array_init_list (144)
    on left: 147 148, on right: 146 148
const_dec (145)
    on left: 149, on right: 4 129 155
untyped_const_dec (146)
    on left: 150 151 152, on right: 149 155 156
multiple_var_dec (147)
    on left: 153 154, on right: 130 154
multiple_const_dec (148)
    on left: 155 156, on right: 131 156
wait_statement (149)
    on left: 157, on right: 132
continue_statement (150)
    on left: 158, on right: 133
break_statement (151)
    on left: 159, on right: 134
return_statement (152)
    on left: 160 161, on right: 135
assignment (153)
    on left: 162 163 164, on right: 136 190 192
assign_op (154)
    on left: 165 166 167 168 169 170 171 172 173 174,
    on right: 162
inc_op (155)
    on left: 175 176, on right: 163
multiple_assignment (156)
    on left: 177, on right: 137
assertion (157)
    on left: 178, on right: 138
null_statement (158)
    on left: 179, on right: 139
block (159)
    on left: 181, on right: 123 205 212
@1 (160)
    on left: 180, on right: 181
statement_list (161)
    on left: 182 183, on right: 181 183 200 201
iterative_statement (162)
    on left: 184 185 186 187 188, on right: 124 187 188
for_statement (163)
    on left: 190, on right: 184
@2 (164)
    on left: 189, on right: 190
for_init (165)
    on left: 191 192, on right: 190
while_statement (166)
    on left: 193, on right: 185
do_statement (167)
    on left: 194, on right: 186
if_statement (168)
    on left: 195 196, on right: 125
switch_statement (169)
    on left: 197, on right: 126
case_list (170)
    on left: 198 199, on right: 197 199
case (171)
    on left: 200 201, on right: 198 199
case_label (172)
    on left: 202 203, on right: 200
func_def (173)
    on left: 205 206, on right: 5
@3 (174)
    on left: 204, on right: 205
param_dec_list (175)
    on left: 207 208, on right: 205 212
nontrivial_param_dec_list (176)
    on left: 209 210, on right: 208 210
func_template (177)
    on left: 212, on right: 206
@4 (178)
    on left: 211, on right: 212
template_param_dec_list (179)
    on left: 213 214, on right: 212
nontrivial_template_param_dec_list (180)
    on left: 215 216, on right: 214 216
template_param_dec (181)
    on left: 217, on right: 215 216


state 0

    0 $accept: . program $end

    TYPEDEF     shift, and go to state 1
    CONST       shift, and go to state 2
    STRUCT      shift, and go to state 3
    ENUM        shift, and go to state 4
    TEMPLATE    shift, and go to state 5
    INT         shift, and go to state 6
    UINT        shift, and go to state 7
    INT64       shift, and go to state 8
    UINT64      shift, and go to state 9
    BOOL        shift, and go to state 10
    ARRAY       shift, and go to state 11
    TUPLE       shift, and go to state 12
    SC_INT      shift, and go to state 13
    SC_BIGINT   shift, and go to state 14
    SC_FIXED    shift, and go to state 15
    SC_UINT     shift, and go to state 16
    SC_BIGUINT  shift, and go to state 17
    SC_UFIXED   shift, and go to state 18
    AC_INT      shift, and go to state 19
    TYPEID      shift, and go to state 20

    program           go to state 21
    program_element   go to state 22
    type_dec          go to state 23
    typedef_dec       go to state 24
    typedef_type      go to state 25
    type_spec         go to state 26
    primitive_type    go to state 27
    register_type     go to state 28
    array_param_type  go to state 29
    mv_type           go to state 30
    const_dec         go to state 31
    func_def          go to state 32
    func_template     go to state 33


state 1

    9 typedef_dec: TYPEDEF . typedef_type ID

    INT         shift, and go to state 6
    UINT        shift, and go to state 7
    INT64       shift, and go to state 8
    UINT64      shift, and go to state 9
    BOOL        shift, and go to state 10
    ARRAY       shift, and go to state 11
    TUPLE       shift, and go to state 12
    SC_INT      shift, and go to state 13
    SC_BIGINT   shift, and go to state 14
    SC_FIXED    shift, and go to state 15
    SC_UINT     shift, and go to state 16
    SC_BIGUINT  shift, and go to state 17
    SC_UFIXED   shift, and go to state 18
    AC_INT      shift, and go to state 19
    TYPEID      shift, and go to state 20

    typedef_type      go to state 34
    primitive_type    go to state 27
    register_type     go to state 28
    array_param_type  go to state 29
    mv_type           go to state 30


state 2

  149 const_dec: CONST . type_spec untyped_const_dec

    STRUCT      shift, and go to state 35
    ENUM        shift, and go to state 36
    INT         shift, and go to state 6
    UINT        shift, and go to state 7
    INT64       shift, and go to state 8
    UINT64      shift, and go to state 9
    BOOL        shift, and go to state 10
    ARRAY       shift, and go to state 11
    TUPLE       shift, and go to state 12
    SC_INT      shift, and go to state 13
    SC_BIGINT   shift, and go to state 14
    SC_FIXED    shift, and go to state 15
    SC_UINT     shift, and go to state 16
    SC_BIGUINT  shift, and go to state 17
    SC_UFIXED   shift, and go to state 18
    AC_INT      shift, and go to state 19
    TYPEID      shift, and go to state 20

    typedef_type      go to state 25
    type_spec         go to state 37
    primitive_type    go to state 27
    register_type     go to state 28
    array_param_type  go to state 29
    mv_type           go to state 30


state 3

    7 type_dec: STRUCT . ID struct_type
   17 type_spec: STRUCT . struct_type

    ID   shift, and go to state 38
    '{'  shift, and go to state 39

    struct_type  go to state 40


state 4

    8 type_dec: ENUM . ID enum_type
   18 type_spec: ENUM . enum_type

    ID   shift, and go to state 41
    '{'  shift, and go to state 42

    enum_type  go to state 43


state 5

  212 func_template: TEMPLATE . @4 '<' template_param_dec_list '>' type_spec ID '(' param_dec_list ')' block

    $default  reduce using rule 211 (@4)

    @4  go to state 44


state 6

   19 primitive_type: INT .

    $default  reduce using rule 19 (primitive_type)


state 7

   20 primitive_type: UINT .

    $default  reduce using rule 20 (primitive_type)


state 8

   21 primitive_type: INT64 .

    $default  reduce using rule 21 (primitive_type)


state 9

   22 primitive_type: UINT64 .

    $default  reduce using rule 22 (primitive_type)


state 10

   23 primitive_type: BOOL .

    $default  reduce using rule 23 (primitive_type)


state 11

   32 array_param_type: ARRAY . '<' type_spec ',' arithmetic_expression '>'

    '<'  shift, and go to state 45


state 12

   42 mv_type: TUPLE . '<' type_spec ',' type_spec '>'
   43        | TUPLE . '<' type_spec ',' type_spec ',' type_spec '>'
   44        | TUPLE . '<' type_spec ',' type_spec ',' type_spec ',' type_spec '>'
   45        | TUPLE . '<' type_spec ',' type_spec ',' type_spec ',' type_spec ',' type_spec '>'
   46        | TUPLE . '<' type_spec ',' type_spec ',' type_spec ',' type_spec ',' type_spec ',' type_spec '>'
   47        | TUPLE . '<' type_spec ',' type_spec ',' type_spec ',' type_spec ',' type_spec ',' type_spec ',' type_spec '>'

    '<'  shift, and go to state 46


state 13

   24 register_type: SC_INT . '<' arithmetic_expression '>'

    '<'  shift, and go to state 47


state 14

   27 register_type: SC_BIGINT . '<' arithmetic_expression '>'

    '<'  shift, and go to state 48


state 15

   28 register_type: SC_FIXED . '<' arithmetic_expression ',' arithmetic_expression '>'

    '<'  shift, and go to state 49


state 16

   25 register_type: SC_UINT . '<' arithmetic_expression '>'

    '<'  shift, and go to state 50


state 17

   26 register_type: SC_BIGUINT . '<' arithmetic_expression '>'

    '<'  shift, and go to state 51


state 18

   29 register_type: SC_UFIXED . '<' arithmetic_expression ',' arithmetic_expression '>'

    '<'  shift, and go to state 52


state 19

   30 register_type: AC_INT . '<' arithmetic_expression ',' FALSE '>'
   31              | AC_INT . '<' arithmetic_expression ',' TRUE '>'

    '<'  shift, and go to state 53


state 20

   15 typedef_type: TYPEID .

    $default  reduce using rule 15 (typedef_type)


state 21

    0 $accept: program . $end

    $end  shift, and go to state 54


state 22

    1 program: program_element . program
    2        | program_element .

    TYPEDEF     shift, and go to state 1
    CONST       shift, and go to state 2
    STRUCT      shift, and go to state 3
    ENUM        shift, and go to state 4
    TEMPLATE    shift, and go to state 5
    INT         shift, and go to state 6
    UINT        shift, and go to state 7
    INT64       shift, and go to state 8
    UINT64      shift, and go to state 9
    BOOL        shift, and go to state 10
    ARRAY       shift, and go to state 11
    TUPLE       shift, and go to state 12
    SC_INT      shift, and go to state 13
    SC_BIGINT   shift, and go to state 14
    SC_FIXED    shift, and go to state 15
    SC_UINT     shift, and go to state 16
    SC_BIGUINT  shift, and go to state 17
    SC_UFIXED   shift, and go to state 18
    AC_INT      shift, and go to state 19
    TYPEID      shift, and go to state 20

    $default  reduce using rule 2 (program)

    program           go to state 55
    program_element   go to state 22
    type_dec          go to state 23
    typedef_dec       go to state 24
    typedef_type      go to state 25
    type_spec         go to state 26
    primitive_type    go to state 27
    register_type     go to state 28
    array_param_type  go to state 29
    mv_type           go to state 30
    const_dec         go to state 31
    func_def          go to state 32
    func_template     go to state 33


state 23

    3 program_element: type_dec . ';'

    ';'  shift, and go to state 56


state 24

    6 type_dec: typedef_dec .
   10 typedef_dec: typedef_dec . '[' arithmetic_expression ']'

    '['  shift, and go to state 57

    $default  reduce using rule 6 (type_dec)


state 25

   16 type_spec: typedef_type .

    $default  reduce using rule 16 (type_spec)


state 26

  205 func_def: type_spec . ID @3 '(' param_dec_list ')' block

    ID  shift, and go to state 58


state 27

   11 typedef_type: primitive_type .

    $default  reduce using rule 11 (typedef_type)


state 28

   12 typedef_type: register_type .

    $default  reduce using rule 12 (typedef_type)


state 29

   13 typedef_type: array_param_type .

    $default  reduce using rule 13 (typedef_type)


state 30

   14 typedef_type: mv_type .

    $default  reduce using rule 14 (typedef_type)


state 31

    4 program_element: const_dec . ';'

    ';'  shift, and go to state 59


state 32

    5 program_element: func_def .

    $default  reduce using rule 5 (program_element)


state 33

  206 func_def: func_template .

    $default  reduce using rule 206 (func_def)


state 34

    9 typedef_dec: TYPEDEF typedef_type . ID

    ID  shift, and go to state 60


state 35

   17 type_spec: STRUCT . struct_type

    '{'  shift, and go to state 39

    struct_type  go to state 40


state 36

   18 type_spec: ENUM . enum_type

    '{'  shift, and go to state 42

    enum_type  go to state 43


state 37

  149 const_dec: CONST type_spec . untyped_const_dec

    ID  shift, and go to state 61

    untyped_const_dec  go to state 62


state 38

    7 type_dec: STRUCT ID . struct_type

    '{'  shift, and go to state 39

    struct_type  go to state 63


state 39

   33 struct_type: '{' . struct_field_list '}'

    STRUCT      shift, and go to state 35
    ENUM        shift, and go to state 36
    INT         shift, and go to state 6
    UINT        shift, and go to state 7
    INT64       shift, and go to state 8
    UINT64      shift, and go to state 9
    BOOL        shift, and go to state 10
    ARRAY       shift, and go to state 11
    TUPLE       shift, and go to state 12
    SC_INT      shift, and go to state 13
    SC_BIGINT   shift, and go to state 14
    SC_FIXED    shift, and go to state 15
    SC_UINT     shift, and go to state 16
    SC_BIGUINT  shift, and go to state 17
    SC_UFIXED   shift, and go to state 18
    AC_INT      shift, and go to state 19
    TYPEID      shift, and go to state 20

    typedef_type       go to state 25
    type_spec          go to state 64
    primitive_type     go to state 27
    register_type      go to state 28
    array_param_type   go to state 29
    struct_field_list  go to state 65
    struct_field       go to state 66
    mv_type            go to state 30


state 40

   17 type_spec: STRUCT struct_type .

    $default  reduce using rule 17 (type_spec)


state 41

    8 type_dec: ENUM ID . enum_type

    '{'  shift, and go to state 42

    enum_type  go to state 67


state 42

   37 enum_type: '{' . enum_const_dec_list '}'

    ID  shift, and go to state 68

    enum_const_dec_list  go to state 69
    enum_const_dec       go to state 70


state 43

   18 type_spec: ENUM enum_type .

    $default  reduce using rule 18 (type_spec)


state 44

  212 func_template: TEMPLATE @4 . '<' template_param_dec_list '>' type_spec ID '(' param_dec_list ')' block

    '<'  shift, and go to state 71


state 45

   32 array_param_type: ARRAY '<' . type_spec ',' arithmetic_expression '>'

    STRUCT      shift, and go to state 35
    ENUM        shift, and go to state 36
    INT         shift, and go to state 6
    UINT        shift, and go to state 7
    INT64       shift, and go to state 8
    UINT64      shift, and go to state 9
    BOOL        shift, and go to state 10
    ARRAY       shift, and go to state 11
    TUPLE       shift, and go to state 12
    SC_INT      shift, and go to state 13
    SC_BIGINT   shift, and go to state 14
    SC_FIXED    shift, and go to state 15
    SC_UINT     shift, and go to state 16
    SC_BIGUINT  shift, and go to state 17
    SC_UFIXED   shift, and go to state 18
    AC_INT      shift, and go to state 19
    TYPEID      shift, and go to state 20

    typedef_type      go to state 25
    type_spec         go to state 72
    primitive_type    go to state 27
    register_type     go to state 28
    array_param_type  go to state 29
    mv_type           go to state 30


state 46

   42 mv_type: TUPLE '<' . type_spec ',' type_spec '>'
   43        | TUPLE '<' . type_spec ',' type_spec ',' type_spec '>'
   44        | TUPLE '<' . type_spec ',' type_spec ',' type_spec ',' type_spec '>'
   45        | TUPLE '<' . type_spec ',' type_spec ',' type_spec ',' type_spec ',' type_spec '>'
   46        | TUPLE '<' . type_spec ',' type_spec ',' type_spec ',' type_spec ',' type_spec ',' type_spec '>'
   47        | TUPLE '<' . type_spec ',' type_spec ',' type_spec ',' type_spec ',' type_spec ',' type_spec ',' type_spec '>'

    STRUCT      shift, and go to state 35
    ENUM        shift, and go to state 36
    INT         shift, and go to state 6
    UINT        shift, and go to state 7
    INT64       shift, and go to state 8
    UINT64      shift, and go to state 9
    BOOL        shift, and go to state 10
    ARRAY       shift, and go to state 11
    TUPLE       shift, and go to state 12
    SC_INT      shift, and go to state 13
    SC_BIGINT   shift, and go to state 14
    SC_FIXED    shift, and go to state 15
    SC_UINT     shift, and go to state 16
    SC_BIGUINT  shift, and go to state 17
    SC_UFIXED   shift, and go to state 18
    AC_INT      shift, and go to state 19
    TYPEID      shift, and go to state 20

    typedef_type      go to state 25
    type_spec         go to state 73
    primitive_type    go to state 27
    register_type     go to state 28
    array_param_type  go to state 29
    mv_type           go to state 30


state 47

   24 register_type: SC_INT '<' . arithmetic_expression '>'

    STRUCT      shift, and go to state 35
    ENUM        shift, and go to state 36
    INT         shift, and go to state 6
    UINT        shift, and go to state 7
    INT64       shift, and go to state 8
    UINT64      shift, and go to state 9
    BOOL        shift, and go to state 10
    ARRAY       shift, and go to state 11
    TUPLE       shift, and go to state 12
    SC_INT      shift, and go to state 13
    SC_BIGINT   shift, and go to state 14
    SC_FIXED    shift, and go to state 15
    SC_UINT     shift, and go to state 16
    SC_BIGUINT  shift, and go to state 17
    SC_UFIXED   shift, and go to state 18
    AC_INT      shift, and go to state 19
    ID          shift, and go to state 74
    NAT         shift, and go to state 75
    TRUE        shift, and go to state 76
    FALSE       shift, and go to state 77
    TYPEID      shift, and go to state 20
    TEMPLATEID  shift, and go to state 78
    '+'         shift, and go to state 79
    '-'         shift, and go to state 80
    '!'         shift, and go to state 81
    '~'         shift, and go to state 82
    '('         shift, and go to state 83

    typedef_type           go to state 25
    type_spec              go to state 84
    primitive_type         go to state 27
    register_type          go to state 28
    array_param_type       go to state 29
    mv_type                go to state 30
    primary_expression     go to state 85
    constant               go to state 86
    integer                go to state 87
    boolean                go to state 88
    symbol_ref             go to state 89
    funcall                go to state 90
    postfix_expression     go to state 91
    array_or_bit_ref       go to state 92
    struct_ref             go to state 93
    subrange               go to state 94
    to_uint_expression     go to state 95
    to_uint64_expression   go to state 96
    prefix_expression      go to state 97
    unary_op               go to state 98
    mult_expression        go to state 99
    add_expression         go to state 100
    arithmetic_expression  go to state 101


state 48

   27 register_type: SC_BIGINT '<' . arithmetic_expression '>'
